Revision history for Rex

{{$NEXT}}
 [API CHANGES]

 [BUG FIXES]
 - Fix warning about redundant arguments when using sync with key
 authentication
 - Fix setting distributor when versioned feature flags are active

 [DOCUMENTATION]
 - Clarify sudo usage for multiple commands
 - Clarify task hooks documentation

 [ENHANCEMENTS]

 [MAJOR]

 [MINOR]

 [NEW FEATURES]
 - Add new configuration option to control attaching default authentication
 info to tasks

 [REVISION]

1.9.0 2020-04-05 Ferenc Erki <erkiferenc@gmail.com>
 [BUG FIXES]
 - Fix setting custom waitpid_blocking_sleep_time
 - Fix autodie feature for local unlink commands

 [DOCUMENTATION]
 - Categorize file system commands based on ability to change contents
 - Clarify documentation of file system commands
 - Document configuration methods

 [NEW FEATURES]
 - Add write_utf8_files feature flag to control encoding of files written
   by Rex

1.8.2 2020-03-05 Ferenc Erki <erkiferenc@gmail.com>
 [BUG FIXES]
 - Fix namespace separator checks for tasks directly in Rexfile

 [REVISION]
 - Fix Travis builds on OS X

1.8.1 2020-02-05 Ferenc Erki <erkiferenc@gmail.com>
 [DOCUMENTATION]
 - Document embedded templates

 [REVISION]
 - Reformat changelog to match CPAN specifications
 - Use NextRelease to update release info
 - Use NextVersion::Semantic for versioning

1.8.0 2020-01-05 Ferenc Erki <erkiferenc@gmail.com>
 - Map commit authors to their canonical name and email - Ferenc Erki
 - Add contributors without commits on master branch - Ferenc Erki
 - Generate CONTRIBUTORS file - Ferenc Erki
 - Added Rex::Pkg::VoidLinux using XBPS - Leah Neukirchen
 - Added Rex::Service::VoidLinux using runit - Leah Neukirchen
 - Added Void Linux - Leah Neukirchen
 - Make waitpid blocking sleep time configurable - Ferenc Erki
 - Match waitpid blocking sleep between fork managers - Ferenc Erki
 - Add Kwalitee tests - Ferenc Erki
 - Update Perl::Tidy on each Travis build - Ferenc Erki